<resources>
    <string name="app_name">android-calculo-juros</string>
    <string name="capital_inicial">Capital Inicial</string>
    <string name="taxa_juros">Taxa de Juros</string>
    <string name="num_meses">Nº de Meses</string>
    <string name="capital_resultante">Capital Resultante</string>
    <string name="calcular">Calcular</string>
    <string name="limpar">Limpar</string>
    <string name="num_decimal">0,00</string>
    <string name="num_inteiro">0</string>
</resources>
